# butler

./: .gitignore  github_service.py  manifest.csv  models.py  pyproject.toml  requirements.txt  sample-workflow.yaml  server.py  sync.py  utils.py
apps/pathfinder-visualizer/: assignment_7.ipynb
apps/pathfinder-visualizer/__MACOSX/: ._assignment_7.ipynb
cli/: ManifestManager.py  config.py  constants.py  lib.py  main.py  pydantic_click.py  sample-sync.yaml  shared.py  utils.py
cli/commands/: add.py  commit.py  init.py  list.py  manifest.py  push.py  remove.py  update.py  upsert.py
cli/commands/manifest/: __init__.py  commit.py  edit.py  setup.py
cli/commands/server/: __init__.py  remove.py  setup.py  start.py  status.py  stop.py
client/: api.py  sync.py
server/: main.py
shared/: models.py  utils.py
