[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "butler"
version = "0.1.0"
dependencies = [
    "pydantic",
    "giturlparse",
]

[project.optional-dependencies]
cli = [
    "click",
    "pyyaml",
    "paramiko",
    "platformdirs"
]
server = [
    "fastapi",
    "uvicorn",
    "python-multipart",
    "sqlmodel",
    "python-dotenv",
]
client = [
    "requests",
    "urllib3",
]

[project.scripts]
butler = "cli.main:cli"

[tool.setuptools.packages.find]
include = ["cli", "cli.*", "client", "client.*", "server", "server.*", "shared", "shared.*"]